# bz2data

./: README.md  pyproject.toml
src/: bz2data.py  filelog.py
tests/: compress.py  download.py  inventory.py  upload.py
tests/policies/: bucket.json  default.json  user.json
