[build-system]
requires = [
    "setuptools>=61.0",
    "boto3"
]
build-backend = "setuptools.build_meta"

[project]
name = "bz2data"
version = "0.0.1"
authors = [
  { name="David Espinoza", email="despinoza@hbs.edu" },
]
description = "Compress data into bz2 files"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Pending Approval :: Harvard Business School",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://www.hbs.edu"
Issues = "https://www.hbs.edu/research-computing-services"
